# ndvi-micro-services

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.weather  README.md  docker-compose.pilot.yml  docker-compose.yml
.github/workflows/: ci.yml  ndvi-canary.yml
crates/common/: Cargo.toml
crates/common/src/: auth.rs  lib.rs  throttle.rs
db/: init.sql
docs/: phase0_contract_freeze.md  phase1_multi_service.md  phase2_weather_migration.md  phase3_gateway_cutover.md  phases_overview.md
monitoring/prometheus/: ndvi_rules.yml  ndvi_slo.json
reports/: 2026-06-18.md  2026-06-23.md  2026-07-01.md  2026-07-02.md
scripts/: deploy_and_smoke.sh  deploy_and_smoke_weather.sh
services/ndvi/: Cargo.toml
services/ndvi/src/: cog_reader.rs  db.rs  lib.rs  metrics.rs  models.rs  pipeline.rs  routes.rs
services/weather/: Cargo.toml
services/weather/src/: cache.rs  config.rs  db.rs  main.rs  routes.rs  services.rs  state.rs  types.rs
services/weather/src/providers/: mod.rs  nasa_power.rs  open_meteo.rs
src/: main.rs  models.rs  routes.rs
