[package]
name = "ndvi-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures-util = "0.3"
governor = "0.6"
http = "1"
jsonwebtoken = "9"
pbkdf2 = "0.12"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
subtle = "2"
tower = "0.4"
axum = { version = "0.7", features = ["json"] }
