[package]
name = "ndvi-service-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "mysql", "uuid", "chrono", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
once_cell = "1"
prometheus = "0.13"
ndvi-common = { path = "../../crates/common" }
tower = { version = "0.4", features = ["limit", "load-shed"] }
reqwest = { version = "0.12", features = ["native-tls-vendored"] }
tiff = "0.9"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.7"
