[package]
name = "weather-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
ndvi-common = { path = "../../crates/common" }
tower = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
once_cell = "1"
prometheus = "0.13"
